--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,20 @@
 nltk==3.2.1
 beautifulsoup4==4.4.1
 lxml==3.6.0
+gensim==0.12.4
 
 ## Utilities
 python-dateutil==2.5.2
 six==1.10.0
+
+## Gensim Dependencies
+#boto==2.40.0
+#bz2file==0.98
+#httpretty==0.8.10
+#numpy==1.11.0
+#requests==2.8.1
+#scipy==0.17.0
+#smart-open==1.3.2
 
 ## Testing
 ## Uncomment and install for development
