--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ nltk==3.2.1
 beautifulsoup4==4.4.1
 lxml==3.6.0
 gensim==0.12.4
+networkx==1.11
 
 ## Utilities
 python-dateutil==2.5.2
 six==1.10.0
+decorator==4.0.9
 
 ## Gensim Dependencies
 #boto==2.40.0
