--- a/.gitignore
+++ b/.gitignore
@@ -66,5 +66,6 @@ target/
 
 # Data and fixtures
 fixtures/corpus
-fixtures/tagged_corpus
-fixtures/sample_corpus
+fixtures/tagged
+fixtures/sample
+fixtures/20160504
