--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ language: python
 python:
   - '2.7'
 
+ virtualenv:
+  system_site_packages: true
+
 before_install:
-  - sudo apt-get install python-numpy python-scipy python-sympy
+  - sudo apt-get install -qq python-numpy python-scipy python-sympy
   - pip install nose
   - pip install coverage
   - pip install coveralls
