--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,12 @@ lxml==3.6.0
 gensim==0.12.4
 networkx==1.11
 
+## Console Utility
+commis==0.3
+confire==0.2.0
+colorama==0.3.6
+PyYAML==3.11
+
 ## Utilities
 python-dateutil==2.5.2
 six==1.10.0
@@ -14,11 +20,12 @@ decorator==4.0.9
 ## Gensim Dependencies
 #boto==2.40.0
 #bz2file==0.98
-#httpretty==0.8.10
-#numpy==1.11.0
 #requests==2.10.0
-#scipy==0.17.1
 #smart-open==1.3.3
+
+## Scientific Computing Dependencies
+#scipy==0.17.1
+#numpy==1.11.0
 
 ## Readability Dependencies
 chardet==2.3.0
@@ -27,11 +34,7 @@ cssselect==0.9.1
 ## Testing
 ## Uncomment and install for development
 #nose==1.3.7
-#coverage==4.0.3
-#mock==2.0.0
-#funcsigs==1.0.0
-#ordereddict==1.1
-#pbr==1.9.1
+#coverage==4.2
 
 ## Building
 ## Uncomment and install for deployment
@@ -41,4 +44,3 @@ cssselect==0.9.1
 #Python==3.5.1
 #pip==8.1.2
 #setuptools==21.2.1
-#wsgiref==0.1.2
